--- a/guli-admin/index.html
+++ b/guli-admin/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-admin-template</title>
+    <title>vue-admin-template</title> 
+    <script src=/tinymce4.7.5/tinymce.min.js></script> 
+    <script src=/tinymce4.7.5/langs/zh_CN.js></script>
   </head>
   <body>
     <div id="app"></div>
